--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,6 @@ pytest = "^7.4.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+brave-cli = "brave.cli:cli"
